# bevy_asteroid_evader

./: Cargo.toml  astroid_evader.js  index.html
src/: main.rs
