[package]
name = "bevy_astroid_evader"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15.1"
rand = "0.9.0"
getrandom = { version = "0.3", features = ["wasm_js"] }

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"
rustflags = ["--cfg", "getrandom_backend=\"wasm_js\""]